Fixed tick alignment

--- a/styles/Pricing.module.scss
+++ b/styles/Pricing.module.scss
@@ -127,7 +127,7 @@
             border-bottom: 1px solid $nav-link;
             padding: 3px 0;
             @include flexbox;
-            @include align-items(center);
+            @include align-items(baseline);
           }
         }
         .featureInclude {
